--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,13 +23,13 @@
       </a>
 
       <div class="text-center">
-        <%= link_to "All41Planet ondernemer worden?", new_company_path %>
+        <%= link_to "All41Planet ondernemer worden?", new_user_path %>
       </div>
     </div>
 
     <!-- INFLUENCERS -->
     <div id="influencers" class="col-lg-4 col-md-6 margin-bottom-lg">
-      <h2 class="text-center margin-bottom-md"><%= @influencers.count %> influencers</h2>
+      <h2 class="text-center margin-bottom-md"><%= @users.count %> influencers</h2>
 
       <div class="influencer padding-md margin-bottom-sm">
         <h3 class="text-center">Influencers</h3>
@@ -40,7 +40,7 @@
           <tr>
             <td><div class="image"><img src="https://app.fintrax.io/img/sam.png" /></div></td>
             <td class="width-100">
-              <div class="name"><%= user["first_name"] %> <%= user["last_name"] %></div>
+              <div class="name"><%= user["name"] %></div>
             </td>
           </tr>
         <% end -%>
@@ -53,7 +53,7 @@
       </a>
 
       <div class="text-center">
-        <%= link_to "All41Planet influencer worden?", new_influencer_path %>
+        <%= link_to "All41Planet influencer worden?", new_user_path %>
       </div>
     </div>
 
@@ -82,7 +82,7 @@
       </a>
 
       <div class="text-center">
-        <%= link_to "All41Planet projectaanvraag indienen?", new_project_path %>
+        <%= link_to "All41Planet projectaanvraag indienen?", new_user_path %>
       </div>
     </div>
 
