--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body class="min-height-100">
 
     <div class="container">
-      <div class="col-12 margin-bottom-md">
+      <div class="col-12 margin-bottom-lg">
         <div id="logo-wrapper" class="text-center">
             <%= link_to image_tag("all41planet_logo.png", id:"logo", class:"navbar-brand"), "/" %>
         </div>
