--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,29 +31,30 @@ html {
 }
 
 body {
-  background: #333;
-  color: #FFF;
+  background: #f7f7f7;
+  color: #333;
   padding: 60px 0;
   font-family: "Flexo";
 }
 
 a {
-  color: #FFF;
+  color: #333;
   text-decoration: none;
 }
 
 a:hover {
-  color: #EEE;
+  color: #000;
 }
 
 
 tr {
-  border-bottom: 15px solid #333;
+  border-bottom: 15px solid #f7f7f7;
 }
 
 h3 {
   margin-bottom: 0px;
   margin-top: 5px;
+  color: #fff;
   font-family: "Flexo-Bold";
 }
 
