--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,11 +46,6 @@ a:hover {
   color: #000;
 }
 
-
-tr {
-  border-bottom: 15px solid #f7f7f7;
-}
-
 h3 {
   margin-bottom: 0px;
   margin-top: 5px;
@@ -100,4 +95,28 @@ h2 {
 
 .margin-bottom-xl {
   margin-bottom: 60px;
+}
+
+.margin-top-xs {
+  margin-top: 5px;
+}
+
+.margin-top-sm {
+  margin-top: 15px;
+}
+
+.margin-top-md {
+  margin-top: 30px;
+}
+
+.margin-top-lg {
+  margin-top: 45px;
+}
+
+.margin-top-xl {
+  margin-top: 60px;
+}
+
+.borderless td, .borderless th {
+    border: none;
 }
