--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,10 +14,26 @@
           <td><div class="image"><img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFyvnowthnfJQ/company-logo_200_200/0/1607441534777?e=2159024400&v=beta&t=NsLl0AniRT7a3w5UXDf4OTDbkgxAC28LS3PQnNt3pJ4" /></div></td>
           <td class="width-100"><div class="name">Sam Van Eenoo<br /><em>Fintrax</em></div></td>
         </tr>
+        <tr>
+          <td><div class="image"><img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFyvnowthnfJQ/company-logo_200_200/0/1607441534777?e=2159024400&v=beta&t=NsLl0AniRT7a3w5UXDf4OTDbkgxAC28LS3PQnNt3pJ4" /></div></td>
+          <td class="width-100"><div class="name">Sam Van Eenoo<br /><em>Fintrax</em></div></td>
+        </tr>
+        <tr>
+          <td><div class="image"><img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFyvnowthnfJQ/company-logo_200_200/0/1607441534777?e=2159024400&v=beta&t=NsLl0AniRT7a3w5UXDf4OTDbkgxAC28LS3PQnNt3pJ4" /></div></td>
+          <td class="width-100"><div class="name">Sam Van Eenoo<br /><em>Fintrax</em></div></td>
+        </tr>
+        <tr>
+          <td><div class="image"><img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFyvnowthnfJQ/company-logo_200_200/0/1607441534777?e=2159024400&v=beta&t=NsLl0AniRT7a3w5UXDf4OTDbkgxAC28LS3PQnNt3pJ4" /></div></td>
+          <td class="width-100"><div class="name">Sam Van Eenoo<br /><em>Fintrax</em></div></td>
+        </tr>
+        <tr>
+          <td><div class="image"><img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFyvnowthnfJQ/company-logo_200_200/0/1607441534777?e=2159024400&v=beta&t=NsLl0AniRT7a3w5UXDf4OTDbkgxAC28LS3PQnNt3pJ4" /></div></td>
+          <td class="width-100"><div class="name">Sam Van Eenoo<br /><em>Fintrax</em></div></td>
+        </tr>
       </table>
 
       <a href="/companies">
-        <div class="company padding-sm margin-bottom-sm margin-top-sm text-center">
+        <div class="company padding-sm margin-bottom-sm text-center">
           Alle Ondernemers
         </div>
       </a>
@@ -36,7 +52,7 @@
       </div>
 
       <table>
-        <% @users.each do |user| %>
+        <% @last_5_users.each do |user| %>
           <tr>
             <td><div class="image"><img src="https://app.fintrax.io/img/sam.png" /></div></td>
             <td class="width-100">
@@ -47,7 +63,7 @@
       </table>
 
       <a href="/influencers">
-        <div class="influencer padding-sm margin-bottom-sm margin-top-sm text-center">
+        <div class="influencer padding-sm margin-bottom-sm text-center">
           Alle influencers
         </div>
       </a>
@@ -73,10 +89,26 @@
           <td><div class="image"><img src="https://www.natuurpunt.be/sites/all/themes/ntpweb_theme/logo.png" /></div></td>
           <td class="width-100"><div class="name">Klimaatbossen natuurpunt</div></td>
         </tr>
+        <tr>
+          <td><div class="image"><img src="https://www.natuurpunt.be/sites/all/themes/ntpweb_theme/logo.png" /></div></td>
+          <td class="width-100"><div class="name">Klimaatbossen natuurpunt</div></td>
+        </tr>
+        <tr>
+          <td><div class="image"><img src="https://www.natuurpunt.be/sites/all/themes/ntpweb_theme/logo.png" /></div></td>
+          <td class="width-100"><div class="name">Klimaatbossen natuurpunt</div></td>
+        </tr>
+        <tr>
+          <td><div class="image"><img src="https://www.natuurpunt.be/sites/all/themes/ntpweb_theme/logo.png" /></div></td>
+          <td class="width-100"><div class="name">Klimaatbossen natuurpunt</div></td>
+        </tr>
+        <tr>
+          <td><div class="image"><img src="https://www.natuurpunt.be/sites/all/themes/ntpweb_theme/logo.png" /></div></td>
+          <td class="width-100"><div class="name">Klimaatbossen natuurpunt</div></td>
+        </tr>
       </table>
 
       <a href="/projects">
-        <div class="project padding-sm margin-bottom-sm margin-top-sm text-center">
+        <div class="project padding-sm margin-bottom-sm text-center">
           Alle Projecten
         </div>
       </a>
