--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,8 +10,8 @@
           </td>
         </tr>
         <tr>
-          <td><%= f.label :first_name %></td>
-          <td><%= f.text_field :first_name %></td>
+          <td class="col-6"><%= f.label :first_name %></td>
+          <td class="col-6"><%= f.text_field :first_name %></td>
         </tr>
         <tr>
           <td><%= f.label :last_name %></td>
