--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -10,7 +10,8 @@ $projects-color: #bd79b9;
 $projects-color-hover: #d689d1;
 
 #logo {
-  height: 80px;
+  height: 60px;
+  margin-left: 20px;
 }
 
 .content-wrapper {
