--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,21 @@
 
   <body class="min-height-100">
 
-    <div class="container">
+    <div class="container margin-bottom-lg margin-top-md">
       <div class="row">
-        <div class="col-12 margin-bottom-lg">
-          <div id="logo-wrapper" class="text-center">
-              <%= link_to image_tag("all41planet_logo.png", id:"logo", class:"navbar-brand"), "/" %>
-          </div>
+        <div class="col-4">
+        </div>
+        <div class="col-4 text-center">
+          <%= link_to image_tag("all41planet_logo.png", id:"logo"), "/" %>
+        </div>
+        <div class="col-4 text-right">
+          <% if current_user %>
+            <button class="btn btn-secondary text-right" disabled><%= current_user["first_name"] %> <%= current_user["last_name"] %></button>
+          <% end %>
         </div>
       </div>
     </div>
+
     <div class="container">
       <div class="row">
         <div class="col-12 margin-bottom-lg">
