--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,6 +18,10 @@
           <td><%= f.text_field :last_name %></td>
         </tr>
         <tr>
+          <td><%= f.label :email %></td>
+          <td><%= f.text_field :email %></td>
+        </tr>
+        <tr>
           <td><%= f.label :password %></td>
           <td><%= f.password_field :password %></td>
         </tr>
