make checks on form

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,7 @@
       <% end -%>
     </table>
 
-    <a href="/companies">
+    <a href="/enterpreneurs">
       <div class="company padding-sm margin-bottom-sm text-center">
         Alle Ondernemers
       </div>
@@ -72,7 +72,7 @@
   <div id="projects" class="d-lg-none col-md-3"></div>
 
   <div id="projects" class="col-lg-4 col-md-6 margin-bottom-lg">
-    <h2 class="text-center margin-bottom-md"><%= @projects.count %> project gesteund</h2>
+    <h2 class="text-center margin-bottom-md"><%= @projects.count %> projecten</h2>
 
     <div class="project padding-md margin-bottom-sm">
       <h3 class="text-center">Projecten</h3>
