--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,16 @@
 
   <body class="min-height-100">
 
+
+    <% flash.each do |type, msg| %>
+      <div class="alert alert-info alert-dismissible fade show" role="alert">
+        <div class="container">
+          <%= msg %>
+          <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button>
+        </div>
+      </div>
+    <% end %>
+
     <div class="container margin-bottom-lg margin-top-md">
       <div class="row">
         <div class="col-4">
@@ -38,11 +48,6 @@
       </div>
     </div>
 
-    <% flash.each do |type, msg| %>
-      <div class="alert alert-info">
-        <%= msg %>
-      </div>
-    <% end %>
 
     <div class="container">
       <div class="row">
