--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,27 +14,27 @@
         <tbody>
           <tr>
             <td class="col-6"><%= f.label :first_name %></td>
-            <td class="col-6"><%= f.text_field :first_name %></td>
+            <td class="col-6"><%= f.text_field :first_name, required:true %></td>
           </tr>
           <tr>
             <td><%= f.label :last_name %></td>
-            <td><%= f.text_field :last_name %></td>
+            <td><%= f.text_field :last_name, required:true %></td>
           </tr>
           <tr>
             <td><%= f.label :email %></td>
-            <td><%= f.text_field :email %></td>
+            <td><%= f.text_field :email, required:true %></td>
           </tr>
           <tr>
             <td><%= f.label :password %></td>
-            <td><%= f.password_field :password %></td>
+            <td><%= f.password_field :password, required:true %></td>
           </tr>
           <tr>
             <td><%= f.label :password_confirmation %></td>
-            <td><%= f.password_field :password_confirmation %></td>
+            <td><%= f.password_field :password_confirmation, required:true %></td>
           </tr>
           <tr>
             <td><%= f.label :avatar %></td>
-            <td><%= f.file_field :avatar, id: :avatar, class: "form-control" %></td>
+            <td><%= f.file_field :avatar, id: :avatar, class: "form-control", required:true %></td>
           </tr>
           <tr>
             <td></td>
@@ -83,15 +83,15 @@
             <% end -%>
             <tr>
               <td class="col-6"><%= c.label :company_name %></td>
-              <td class="col-6"><%= c.text_field :name %></td>
+              <td class="col-6"><%= c.text_field :name, id: :company_name  %></td>
             </tr>
             <tr>
               <td><%= c.label :vat_number %></td>
-              <td><%= c.text_field :vat_number %></td>
+              <td><%= c.text_field :vat_number, id: :company_vat_number %></td>
             </tr>
             <tr>
               <td><%= c.label :company_website %></td>
-              <td><%= c.text_field :website %></td>
+              <td><%= c.text_field :website, id: :company_website %></td>
             </tr>
             <tr>
               <td><%= c.label :company_logo %></td>
@@ -149,11 +149,11 @@
               <td class="col-6"><%= pr.text_field :name %></td>
             </tr>
             <tr>
-              <td><%= pr.label :description %></td>
+              <td><%= pr.label :description, id: :project_description %></td>
               <td><%= pr.text_area :description %></td>
             </tr>
             <tr>
-              <td><%= pr.label :project_website %></td>
+              <td><%= pr.label :project_website, id: :project_website %></td>
               <td><%= pr.text_field :website %></td>
             </tr>
             <tr>
@@ -225,28 +225,26 @@ $avatar = false
 $company_logo = false
 $project_logo = false
 
+
 $("#avatar").change(function () {
-    console.log("AVATAR CHANGE")
   $avatar = true
-  $('#upload-modal').modal('show');
+  $('#upload-modal').modal({backdrop: 'static', keyboard: false});
   $preview = $('#avatar_preview')[0];
   readURL(this);
 });
 
 
 $("#company_logo").change(function () {
-    console.log("COMPANY CHANGE")
   $company_logo = true
-  $('#upload-modal').modal('show');
+  $('#upload-modal').modal({backdrop: 'static', keyboard: false});
   $preview = $('#company_logo_preview')[0];
   readURL(this);
 });
 
 
 $("#project_logo").change(function () {
-    console.log("PROJECT CHANGE")
   $project_logo = true
-  $('#upload-modal').modal('show');
+  $('#upload-modal').modal({backdrop: 'static', keyboard: false});
   $preview = $('#project_logo_preview')[0];
   readURL(this);
 });
@@ -341,6 +339,21 @@ $button.on('click', function () {
 
 
 
+show_company = $("#show_company").val()
+if(show_company == "true"){
+  $("#company_name").attr("required", true);
+  $("company_vat_number").attr("required", true);
+  $("company_website").attr("required", true);
+  $("company_logo").attr("required", true);
+}
+
+show_project = $("#show_project").val()
+if(show_project == "true"){
+  $("#project_name ").attr("required", true);
+  $("project_description").attr("required", true);
+  $("project_website").attr("required", true);
+  $("project_logo").attr("required", true);
+}
 
 $("#company-header").on('click', function () {
   $("#company-body").toggle();
@@ -353,9 +366,17 @@ $("#company-header").on('click', function () {
   if(show_company == "true"){
     show_company = false
     $("#show_company").val(show_company)
+    $("#company_name").attr("required", false);
+    $("company_vat_number").attr("required", false);
+    $("company_website").attr("required", false);
+    $("company_logo").attr("required", false);
   }else{
     show_company = true
     $("#show_company").val(show_company)
+    $("#company_name").attr("required", true);
+    $("company_vat_number").attr("required", true);
+    $("company_website").attr("required", true);
+    $("company_logo").attr("required", true);
   }
 });
 
@@ -370,9 +391,17 @@ $("#project-header").on('click', function () {
   if(show_project == "true"){
     show_project = false
     $("#show_project").val(show_project)
+    $("#project_name ").attr("required", false);
+    $("project_description").attr("required", false);
+    $("project_website").attr("required", false);
+    $("project_logo").attr("required", false);
   }else{
     show_project = true
     $("#show_project").val(show_project)
+    $("#project_name ").attr("required", true);
+    $("project_description").attr("required", true);
+    $("project_website").attr("required", true);
+    $("project_logo").attr("required", true);
   }
 });
 </script>
