--- a/app/views/home/lists.html.erb
+++ b/app/views/home/lists.html.erb
@@ -28,7 +28,7 @@
 
     <a href="/enterpreneurs">
       <div class="company padding-sm margin-bottom-sm text-center">
-        Alle Ondernemers
+        Alle ondernemers
       </div>
     </a>
 
@@ -98,7 +98,7 @@
 
     <a href="/projects">
       <div class="project padding-sm margin-bottom-sm text-center">
-        Alle Projecten
+        Alle projecten
       </div>
     </a>
 
