--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -63,6 +63,7 @@ $influencers-color-hover: #d689d1;
   width: 100px;
   height: 100px;
   margin-right: 15px;
+  background-color: #FFF;
 }
 
 .image img {
