--- a/app/views/home/lists.html.erb
+++ b/app/views/home/lists.html.erb
@@ -33,7 +33,7 @@
     </a>
 
     <div class="text-center">
-      <%= link_to "All41Planet ondernemer worden?", new_user_path("company": true) %>
+      <%= link_to "All41Planet ondernemer worden?", new_user_path("company": true), data: { turbolinks: false } %>
     </div>
   </div>
 
@@ -63,7 +63,7 @@
     </a>
 
     <div class="text-center">
-      <%= link_to "All41Planet influencer worden?", new_user_path %>
+      <%= link_to "All41Planet influencer worden?", new_user_path, data: { turbolinks: false } %>
     </div>
   </div>
 
@@ -103,7 +103,7 @@
     </a>
 
     <div class="text-center">
-      <%= link_to "All41Planet projectaanvraag indienen?", new_user_path("project": true) %>
+      <%= link_to "All41Planet projectaanvraag indienen?", new_user_path("project": true), data: { turbolinks: false } %>
     </div>
   </div>
 
