no turbolinks, some fixes

--- a/app/views/home/lists.html.erb
+++ b/app/views/home/lists.html.erb
@@ -33,7 +33,7 @@
     </a>
 
     <div class="text-center">
-      <%= link_to "All41Planet ondernemer worden?", new_user_path("company": true), data: { turbolinks: false } %>
+      <%= link_to "All41Planet ondernemer worden?", new_user_path("company": true), :"data-no-turbolink" => true %>
     </div>
   </div>
 
