--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -27,6 +27,12 @@
 
     .body{
       padding-bottom: 15px;
+      text-align: justify;
+    }
+
+    .article-image {
+      width: 100%;
+      margin-bottom: 15px;
     }
 
   }
