--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,13 +8,16 @@
       <%= article.created_at.strftime("%D %H:%M") %>
     </div>
     <div class="body">
-      <%= article.body %>
+      <%= image_tag article.image_data, class:"article-image" %>
+      <%= simple_format(article.body) %>
     </div>
     <div class="likes-and-comments">
       <%= turbo_frame_tag "like_#{article.id}" do %>
         <%= render "likes", article: article %>
       <% end -%>
-      <i class="fa-solid fa-comment commenct-icon"></i> <%= article.comments.count %>
+      <%= link_to article do |c| %>
+        <i class="fa-solid fa-comment commenct-icon"></i> <%= article.comments.count %>
+      <% end -%>
     </div>
   </div>
 <% end -%>
