--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,7 +8,7 @@
       <%= article.created_at.strftime("%D %H:%M") %>
     </div>
     <div class="body">
-      <% if  %>
+      <% if article.image_data.attached? %>
         <%= image_tag article.image_data, class:"article-image" %>
       <% end %>
       <%= simple_format(article.body) %>
