--- a/app/views/home/lists.html.erb
+++ b/app/views/home/lists.html.erb
@@ -39,10 +39,10 @@
 
   <!-- INFLUENCERS -->
   <div id="influencers" class="col-lg-4 col-md-6 margin-bottom-lg">
-    <h2 class="text-center margin-bottom-md"><%= @users.count %> influencers</h2>
+    <h2 class="text-center margin-bottom-md"><%= @users.count %> leden</h2>
 
     <div class="influencer padding-md margin-bottom-sm">
-      <h3 class="text-center">Influencers</h3>
+      <h3 class="text-center">Leden</h3>
     </div>
 
     <table>
@@ -63,7 +63,7 @@
     </a>
 
     <div class="text-center">
-      <%= link_to "All41Planet influencer worden?", new_user_path, data: { turbolinks: false } %>
+      <%= link_to "All41Planet lid worden?", new_user_path, data: { turbolinks: false } %>
     </div>
   </div>
 
