--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,12 +41,12 @@
 
     <div class="container margin-bottom-lg margin-top-md">
       <div class="row">
-        <div class="col-sm-12 order-sm-2 col-md-4">
+        <div class="order-xs-2 col-sm-12 order-sm-2 col-md-4 order-md-1">
         </div>
-        <div class="col-sm-12 order-sm-3 push-sm-12 col-md-4 text-center">
+        <div class="order-xs-3 col-sm-12 order-sm-3 push-sm-12 col-md-4 order-md-2 text-center">
           <%= link_to image_tag("all41planet_logo.png", id:"logo"), "/" %>
         </div>
-        <div class="col-sm-12 order-sm-1 col-md-4 text-right">
+        <div class="order-xs-1 col-sm-12 order-sm-1 col-md-4 order-md-3 text-right">
           <% if @current_user %>
             <span class="dropdown">
               <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
