don't close upload window when clicking next to it

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -196,7 +196,7 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="upload-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div id="upload-modal" class="modal fade" data-keyboard="false" data-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
