--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -188,3 +188,7 @@ h2 {
     background-color: $influencers-color-hover;
     border-color: $influencers-color-hover;
 }
+
+#userButtons {
+  padding-bottom: 15px;
+}
