limit width of login

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -10,7 +10,7 @@ $influencers-color: #bd79b9;
 $influencers-color-hover: #d689d1;
 
 #sign-up {
-  width: 800px;
+  max-width: 800px;
   margin-left:auto;
   margin-right: auto;
   background: #FFF;
