--- a/app/views/home/lists.html.erb
+++ b/app/views/home/lists.html.erb
@@ -33,7 +33,7 @@
     </a>
 
     <div class="text-center">
-      <%= link_to "All41Planet ondernemer worden?", new_user_path("company": true), :"data-no-turbolink" => true %>
+      <%= link_to "All41Planet ondernemer worden?", new_user_path("company": true), data: { turbolinks: false } %>
     </div>
   </div>
 
@@ -58,7 +58,7 @@
 
     <a href="/influencers">
       <div class="influencer padding-sm margin-bottom-sm text-center">
-        Alle influencers
+        Alle leden
       </div>
     </a>
 
