--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,7 +8,7 @@
     </div>
     <div class="body">
       <% if @article.image_data.attached? %>
-        <%= image_tag article.image_data, class:"article-image" %>
+        <%= image_tag @article.image_data, class:"article-image" %>
       <% end %>
       <%= simple_format(@article.body) %>
     </div>
