--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 <section id="influencers">
   <div class="row">
     <div class="col-2">
-      <%= image_tag "members-icon", class: "group-icon" %>
+      <%= image_tag "members-icon.png", class: "group-icon" %>
     </div>
     <div class="col-10">
       <h3 class="title">Leden</h3>
@@ -25,7 +25,7 @@
 <section id="companies">
   <div class="row">
     <div class="col-2">
-      <%= image_tag "enterpreneurs-icon", class: "group-icon" %>
+      <%= image_tag "enterpreneurs-icon.png", class: "group-icon" %>
     </div>
     <div class="col-10">
       <h3 class="title">Ondernemers</h3>
@@ -44,7 +44,7 @@
 <section id="projects">
   <div class="row">
     <div class="col-2">
-      <%= image_tag "projects-icon", class: "group-icon" %>
+      <%= image_tag "projects-icon.png", class: "group-icon" %>
     </div>
     <div class="col-10">
       <h3 class="title">Projecten</h3>
