--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -53,7 +53,7 @@
       </div>
 
       <div class="link">
-        <%= link_to "All41Planet ondernemer worden?", new_user_path("project": true), data: { turbolinks: false } %>
+        <%= link_to "All41Planet project indienen?", new_user_path("project": true), data: { turbolinks: false } %>
       </div>
     </div>
   </div>
