--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,7 +51,16 @@ a {
 }
 
 a:hover {
-  color: #000;
+  color: #777;
+}
+
+.highlight {
+  color: $influencers-color;
+  text-decoration: none;
+}
+
+.highlight:hover{
+  color: $influencers-color-hover;
 }
 
 h3 {
